# BeamNG_Telemetry_App

./: README.md  app.py  pyproject.toml
data/telemetry/: beam_0_1781549887759.json  beam_0_1781549894162.json  beam_0_1781549897800.json  beam_0_1781549902085.json  beam_0_1781549907340.json  beam_0_1781549911485.json  beam_0_1781549915774.json  beam_0_1781549920442.json  beam_0_1781549924000.json  beam_0_1781549927439.json  beam_0_1781549930867.json  beam_0_1781549934238.json  beam_0_1781549937568.json  demo_vehicle_1780999366526.json  demo_vehicle_1781013514237.json  demo_vehicle_1781013521789.json  demo_vehicle_1781013527176.json  demo_vehicle_1781013532723.json  demo_vehicle_1781013538289.json  demo_vehicle_1781013543892.json  demo_vehicle_1781013549503.json  demo_vehicle_1781013555306.json  demo_vehicle_1781013560670.json  demo_vehicle_1781013567999.json  demo_vehicle_1781469294876.json  demo_vehicle_1781469297800.json  demo_vehicle_1781480322048.json  demo_vehicle_1781480328970.json  demo_vehicle_1781480334423.json  demo_vehicle_1781480339925.json  demo_vehicle_1781480659683.json  demo_vehicle_1781480831771.json  demo_vehicle_1781480831850.json
src/beamng_telemetry_dashboard/: __init__.py  client.py
src/beamng_telemetry_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/beamng_telemetry_dashboard/backend/: __init__.py  telemetry.py
src/beamng_telemetry_dashboard/frontend/: __init__.py  dashboard.py  ui.py
