[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamng-telemetry-dashboard"
version = "0.1.0"
description = "A Streamlit dashboard that reads telemetry from BeamNG.drive via OutGauge UDP"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit>=1.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
